sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var estTrie = true
  while (estTrie) {
    estTrie = false
    for (i <- 1 to getNombreValeurs()-2) {
      if (!plusPetit(i,i+1)) {
        echange(i,i+1)
        estTrie = True
      }
    }
  }
}
  